# PhraseGeocoder

./: README.md  example.py  main.py  pyproject.toml  setup_example.py
phrasegeo/: GNAFLoader.py  Matcher.py  MatcherPipeline.py  __init__.py  utils.py
phrasegeo/datasets/: addresses1.csv
queries/: create_geocoder_tables.sql  create_gnaf.sql  create_indexes.sql  create_phrases.sql  create_trigram_indexes.sql  create_trigram_phrases.sql  do_match.sql  do_match4.sql  do_trigram_match2.sql  gnaf_stats.sql  load_aut_data.sql  load_state_data.sql  make_addresses.sql  trigram_phrase_inverted.sql
tests/: test_phrasegeo.py
