[tool.poetry]
name = "PhraseGeo"
version = "0.1.0"
description = ""
authors = ["alex.lee <alex.lee@dpc.vic.gov.au>"]

[tool.poetry.dependencies]
python = "^3.8"
results = "^0.1.1588569394"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
